--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.15",
     "expo-camera": "~13.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
     "expo-location": "~15.1.1",
     "expo-media-library": "~15.2.3",
@@ -25,6 +26,7 @@
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
